--- a/src/app/aplicacao-vacina/aplicacao-vacina.component.html
+++ b/src/app/aplicacao-vacina/aplicacao-vacina.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <article class="container my-3">
   <div class="row py-3">
-    <div class="col-sm-4">
+    <div class="col-sm-6">
       <mat-card>
         <mat-card-title>Buscar Paciente</mat-card-title>
         <mat-card-content>
@@ -19,17 +19,32 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <ng-container *ngFor="let vacina of pacienteVacinas">
-      <div class="col-sm-4">
-        <mat-card>
-          <mat-card-title>1º Dose.</mat-card-title>
-          <mat-card-content>
-            {{vacina | json}}
 
-          </mat-card-content>
-        </mat-card>
-      </div>
-    </ng-container>
+    <div class="col-sm-6">
+      <mat-card *ngIf="pacienteVacinas.length > 0">
+        <mat-card-title>Aplicações:</mat-card-title>
+        <mat-card-content>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Nome da Vacina</th>
+                <th>Data da Aplicação</th>
+                <th>Excluir</th>
+              </tr>
+            </thead>
+            <tbody>
+              <ng-container *ngFor="let vacina of pacienteVacinas">
+                <tr>
+                  <td>{{vacina.getNomeDaVacina()}}</td>
+                  <td>{{vacina.getDataDaAplicacaoFormatada(vacina.getDataDaAplicacao())}}</td>
+                  <td></td>
+                </tr>
+              </ng-container>
+            </tbody>
+          </table>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
   <div class="row py-3">
     <div class="col-sm-12 col-lg-6">
@@ -54,13 +69,8 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="col-sm-12 col-lg-6">
-      <mat-card *ngIf="paciente == undefined">
-        <mat-card-content>
-          <mat-card-title>Selecione o Paciente que será vacinado!</mat-card-title>
-        </mat-card-content>
-      </mat-card>
-      <mat-card *ngIf="paciente != undefined">
+    <div class="col-sm-12 col-lg-6" *ngIf="paciente != undefined">
+      <mat-card >
         <mat-card-content>
           <mat-card-title>Dados do Paciente</mat-card-title>
           <div class="my-2">
@@ -81,7 +91,6 @@
               </div>
             </div>
           </div>
-
         </mat-card-content>
       </mat-card>
     </div>
