--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,7 +50,7 @@
           <td class="mat-cell" colspan="4">Sem Informações.</td>
         </tr>
       </table>
-      <mat-paginator [pageSizeOptions]="[3, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+     <!-- <mat-paginator [pageSizeOptions]="[3, 10, 25, 100]" showFirstLastButtons></mat-paginator>-->
     </mat-card>
   </article>
 </section>
