--- a/src/app/aplicacao-vacina/aplicacao-vacina.component.html
+++ b/src/app/aplicacao-vacina/aplicacao-vacina.component.html
@@ -90,7 +90,9 @@
                 <tr>
                   <td>{{vacina.getNomeDaVacina()}}</td>
                   <td>{{vacina.getDataDaAplicacaoFormatada(vacina.getDataDaAplicacao())}}</td>
-                  <td></td>
+                  <td> <button mat-icon-button color="warn" matTooltip="excluir" matTooltipPosition="above" (click)="excluir(vacina.getId())">
+                    <mat-icon>delete</mat-icon>
+                  </button></td>
                 </tr>
               </ng-container>
             </tbody>
