--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,56 @@
 <app-navbar></app-navbar>
 <section class="container">
-  <article class="my-3 py-3">
+  <article class="my-5 " *ngIf="pacientes$.length > 0">
     <mat-card>
       <mat-card-title>Ficha dos pacientes</mat-card-title>
-    </mat-card>
-  </article>
+      <mat-card-content class="p-3" class="table-responsive">
+        <mat-form-field>
+          <mat-label>Filtro</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+        </mat-form-field>
 
-  <article class="my-3" *ngIf="pacientes$.length > 0">
-    <mat-card>
-      <mat-form-field>
-        <mat-label>Filtro</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-      </mat-form-field>
-      <table mat-table [dataSource]="dataSource" matSort>
-        <!-- Name Column -->
-        <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
-          <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-        </ng-container>
-        <!-- Weight Column -->
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="numeroDoCpf">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> CPF </th>
-          <td mat-cell *matCellDef="let element"><span>{{element.numeroDoCpf | mask: getCpfCnpjMask(element.numeroDoCpf)}}</span></td>
-        </ng-container>
-        <ng-container matColumnDef="dataDeNascimento" mat-sort-header>
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Nasc. </th>
-          <td mat-cell *matCellDef="let element"> {{element.dataDeNascimentoFormatada}} </td>
-        </ng-container>
-        <ng-container matColumnDef="acoes">
-          <mat-header-cell mat-header-cell *matHeaderCellDef mat-sort-header> Ações </mat-header-cell>
-          <td mat-cell *matCellDef="let element" mat-sort-header>
-            <a mat-icon-button color="primary" matTooltip="editar" matTooltipPosition="above" [routerLink]="['editar', element.id]">
-              <mat-icon>edit</mat-icon>
-            </a>
-            <button mat-icon-button color="warn" matTooltip="excluir" matTooltipPosition="above" (click)="excluir(element.id)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Sem Informações.</td>
-        </tr>
-      </table>
-     <!-- <mat-paginator [pageSizeOptions]="[3, 10, 25, 100]" showFirstLastButtons></mat-paginator>-->
+        <table mat-table [dataSource]="dataSource" matSort>
+
+          <ng-container matColumnDef="nome">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
+            <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="numeroDoCpf">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> CPF </th>
+            <td mat-cell *matCellDef="let element"><span>{{element.numeroDoCpf | mask: getCpfCnpjMask(element.numeroDoCpf)}}</span></td>
+          </ng-container>
+
+          <ng-container matColumnDef="dataDeNascimento" >
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Nasc. </th>
+            <td mat-cell *matCellDef="let element"> {{element.dataDeNascimentoFormatada}} </td>
+          </ng-container>
+          <ng-container matColumnDef="acoes" >
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ações </th>
+            <td mat-cell *matCellDef="let element" >
+              <a mat-icon-button color="primary" matTooltip="editar" matTooltipPosition="above" [routerLink]="['editar', element.id]">
+                <mat-icon>edit</mat-icon>
+              </a>
+              <button mat-icon-button color="warn" matTooltip="excluir" matTooltipPosition="above" (click)="excluir(element.id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">Sem Informações.</td>
+          </tr>
+        </table>
+        <!-- <mat-paginator [pageSizeOptions]="[3, 10, 25, 100]" showFirstLastButtons></mat-paginator>-->
+      </mat-card-content>
     </mat-card>
   </article>
 </section>
