ajuste no menu principal

--- a/src/app/novo-paciente/novo-paciente.component.html
+++ b/src/app/novo-paciente/novo-paciente.component.html
@@ -8,19 +8,19 @@
       <mat-card-content>
         <div class="container p-3 ">
           <form [formGroup]="formulario" (ngSubmit)="salvarDadosPaciente()">
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="mx-2">
               <mat-label>Nome</mat-label>
               <input matInput formControlName="nome">
             </mat-form-field>
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="mx-2">
               <mat-label>email</mat-label>
               <input matInput formControlName="email">
             </mat-form-field>
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="mx-2">
               <mat-label>Cpf</mat-label>
               <input matInput formControlName="numeroDoCpf" type="text" [mask]="getCpfCnpjMask()">
             </mat-form-field>
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="mx-2">
               <mat-label>Data de nascimento</mat-label>
               <input matInput [matDatepicker]="picker" formControlName="dataDeNascimento">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
