--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -5,17 +5,23 @@
   <span>Programa Vacina Sim</span>
   <span class="example-spacer"></span>
   <mat-menu #settingsMenu>
-    <a mat-menu-item [routerLink]="['/']">
-      <mat-icon>home</mat-icon>
-      <span>Home</span>
-    </a>
-    <a mat-menu-item [routerLink]="['novo']">
-      <mat-icon>account_circle</mat-icon>
-      <span>Nova Paciente</span>
-    </a>
-    <a mat-menu-item [routerLink]="['aplicacao-vacina']">
-      <mat-icon>local_pharmacy</mat-icon>
-      <span>Nova Aplicação</span>
-    </a>
+    <div mat-menu-item>
+      <button mat-button [routerLink]="['/']">
+        <mat-icon>home</mat-icon>
+        <span>Home</span>
+      </button>
+    </div>
+    <div mat-menu-item>
+      <button mat-button [routerLink]="['novo']">
+        <mat-icon>account_circle</mat-icon>
+        <span>Nova Paciente</span>
+      </button>
+    </div>
+    <div mat-menu-item>
+      <button mat-button [routerLink]="['aplicacao-vacina']">
+        <mat-icon>local_pharmacy</mat-icon>
+        <span>Nova Aplicação</span>
+      </button>
+    </div>
   </mat-menu>
 </mat-toolbar>
