--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -18,7 +18,7 @@
       </button>
     </div>
     <div mat-menu-item>
-      <button mat-button [routerLink]="['aplicacao-vacina']">
+      <button mat-button [routerLink]="['aplicacao-vacina/aplicacao']">
         <mat-icon>local_pharmacy</mat-icon>
         <span>Nova Aplicação</span>
       </button>
