--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 
           <ng-container matColumnDef="nome">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
-            <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+            <td mat-cell *matCellDef="let element">{{element.nome}}</td>
           </ng-container>
 
           <ng-container matColumnDef="email">
@@ -26,19 +26,39 @@
             <td mat-cell *matCellDef="let element"><span>{{element.numeroDoCpf | mask: getCpfCnpjMask(element.numeroDoCpf)}}</span></td>
           </ng-container>
 
-          <ng-container matColumnDef="dataDeNascimento" >
+          <ng-container matColumnDef="dataDeNascimento">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Nasc. </th>
             <td mat-cell *matCellDef="let element"> {{element.dataDeNascimentoFormatada}} </td>
           </ng-container>
-          <ng-container matColumnDef="acoes" >
+          <ng-container matColumnDef="acoes">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Ações </th>
-            <td mat-cell *matCellDef="let element" >
-              <a mat-icon-button color="primary" matTooltip="editar" matTooltipPosition="above" [routerLink]="['editar', element.id]">
-                <mat-icon>edit</mat-icon>
-              </a>
-              <button mat-icon-button color="warn" matTooltip="excluir" matTooltipPosition="above" (click)="excluir(element.id)">
-                <mat-icon>delete</mat-icon>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
               </button>
+              <mat-menu #menu="matMenu">
+                <div mat-menu-item>
+                  <button mat-icon-button [routerLink]="['aplicacao-vacina/aplicacao', element.numeroDoCpf]">
+                    <span >
+                      <mat-icon color="accent">local_pharmacy</mat-icon>vacinar
+                    </span>
+                  </button>
+                </div>
+                <div mat-menu-item>
+                  <button mat-icon-button [routerLink]="['editar', element.id]">
+                    <span>
+                      <mat-icon color="primary">edit</mat-icon>editar
+                    </span>
+                  </button>
+                </div>
+                <div mat-menu-item>
+                  <button mat-icon-button (click)="excluir(element.id)">
+                    <span >
+                      <mat-icon color="warn">delete</mat-icon>excluir
+                    </span>
+                  </button>
+                </div>
+              </mat-menu>
             </td>
           </ng-container>
 
